# gstreamer__attic__insanity-gst

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  gtk-doc.make
docs/: Makefile.am
docs/insanity-gst/: Makefile.am  insanity-gst-docs.sgml  insanity-gst-sections.txt
generators/: Makefile.am  insanity-generator-elements
lib/: Makefile.am  insanity-gst-0.10-uninstalled.pc.in  insanity-gst-uninstalled.pc.in  insanity-gst.pc.in
lib/insanity-gst/: Makefile.am  insanity-gst.h  insanitygstpipelinetest.c  insanitygstpipelinetest.h  insanitygsttest.c  insanitygsttest.h
tests/: Makefile.am  insanity-fake-appsink.c  insanity-fake-appsink.h  insanity-file-appsrc.c  insanity-file-appsrc.h  insanity-http-server.c  insanity-http-server.h  insanity-marshal.list  insanity-test-gst-blank.c  insanity-test-gst-decoder.c  insanity-test-gst-demuxer.c  insanity-test-gst-discoverer.c  insanity-test-gst-dvd.c  insanity-test-gst-generic-pipeline.c  insanity-test-gst-hls.c  insanity-test-gst-http.c  insanity-test-gst-play.c  insanity-test-gst-rtsp.c  insanity-test-gst-seek.c  insanity-test-gst-stream-switch.c  insanity-test-gst-subtitles.c  media-descriptor-common.c  media-descriptor-common.h  media-descriptor-parser.c  media-descriptor-parser.h  media-descriptor-writer.c  media-descriptor-writer.h  run-insanity-test-gst-blank  run-insanity-test-gst-generic-pipeline
tools/: Makefile.am  discoverer-remove-all-tags  discoverer-tag
